--- a/etl-web/.settings/com.google.gdt.eclipse.core.prefs
+++ b/etl-web/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
-lastWarOutDir=E\:/workspace130729/svn/etl-web/target/etl-web-0.0.1-SNAPSHOT
+lastWarOutDir=/home/xuehuihe/git/canna/etl-web/target/etl-web-0.0.1-SNAPSHOT
 warSrcDir=src/main/webapp
 warSrcDirIsOutput=false
