--- a/canna/.settings/com.google.gdt.eclipse.core.prefs
+++ b/canna/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
-lastWarOutDir=/home/xuehuihe/git/canna/canna/target/canna-1.0-SNAPSHOT
+lastWarOutDir=E\:/workspace130729/git/canna/canna/target/canna-1.0-SNAPSHOT
 warSrcDir=src/main/webapp
 warSrcDirIsOutput=false
