--- a/example/pom.xml
+++ b/example/pom.xml
@@ -34,7 +34,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.openjpa</groupId>
-			<artifactId>openjpa</artifactId>
+			<artifactId>openjpa-all</artifactId>
 			<version>2.1.0</version>
 		</dependency>
 		<dependency>
