--- a/etl-parent/pom.xml
+++ b/etl-parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>xdata.etl</groupId>
 	<artifactId>etl-parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<properties>
 		<hadoop.version>1.0.4</hadoop.version>
@@ -18,6 +18,11 @@
 		<beanlib.version>5.0.5</beanlib.version>
 		<aspectj.version>1.7.2</aspectj.version>
 		<javassist.version>3.11.0.GA</javassist.version>
+
+		<gwt.version>2.5.1</gwt.version>
+		<gxt.version>3.0.1</gxt.version>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<repositories>
@@ -47,6 +52,104 @@
 	</repositories>
 	<dependencyManagement>
 		<dependencies>
+			<!-- etl-modul -->
+			<dependency>
+				<groupId>xdata.etl</groupId>
+				<artifactId>site-service</artifactId>
+			</dependency>
+
+			<dependency>
+				<groupId>xdata.etl</groupId>
+				<artifactId>site-shared</artifactId>
+			</dependency>
+			<!-- /etl-modul -->
+			<!-- gwt -->
+
+			<dependency>
+				<groupId>com.google.gwt</groupId>
+				<artifactId>gwt-servlet</artifactId>
+				<version>${gwt.version}</version>
+				<scope>runtime</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.gwt</groupId>
+				<artifactId>gwt-user</artifactId>
+				<version>${gwt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.gwt</groupId>
+				<artifactId>gwt-dev</artifactId>
+				<version>${gwt.version}</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>1.0.0.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>1.0.0.GA</version>
+				<classifier>sources</classifier>
+				<scope>provided</scope>
+			</dependency>
+			<!-- /gwt -->
+
+			<!-- gxt -->
+			<dependency>
+				<groupId>com.sencha.gxt</groupId>
+				<artifactId>gxt</artifactId>
+				<version>${gxt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sencha.gxt</groupId>
+				<artifactId>gxt</artifactId>
+				<version>${gxt.version}</version>
+				<classifier>sources</classifier>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.sencha.gxt</groupId>
+				<artifactId>gxt-chart</artifactId>
+				<version>${gxt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sencha.gxt</groupId>
+				<artifactId>gxt-chart</artifactId>
+				<version>${gxt.version}</version>
+				<classifier>sources</classifier>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.sencha.gxt</groupId>
+				<artifactId>gxt-legacy</artifactId>
+				<version>${gxt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sencha.gxt</groupId>
+				<artifactId>gxt-legacy</artifactId>
+				<version>${gxt.version}</version>
+				<classifier>sources</classifier>
+				<scope>provided</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.sencha.gxt</groupId>
+				<artifactId>uibinder-bridge</artifactId>
+				<version>2.4.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.gwt.inject</groupId>
+				<artifactId>gin</artifactId>
+				<version>2.0.0</version>
+				<scope>provided</scope>
+			</dependency>
+			<!-- /gxt -->
+
 			<!-- hibernate -->
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -274,6 +377,16 @@
 				<artifactId>commons-dbcp</artifactId>
 				<version>1.4</version>
 			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.8</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.1</version>
+			</dependency>
 
 			<!-- /others -->
 
@@ -315,7 +428,12 @@
 			<!-- /provided -->
 
 			<!-- test -->
-
+			<dependency>
+				<groupId>org.hsqldb</groupId>
+				<artifactId>hsqldb</artifactId>
+				<version>2.3.0</version>
+				<scope>test</scope>
+			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
