--- a/etl-parent/pom.xml
+++ b/etl-parent/pom.xml
@@ -52,17 +52,18 @@
 	</repositories>
 	<dependencyManagement>
 		<dependencies>
-			<!-- etl-modul -->
-			<dependency>
-				<groupId>xdata.etl</groupId>
-				<artifactId>site-service</artifactId>
-			</dependency>
 
 			<dependency>
 				<groupId>xdata.etl</groupId>
 				<artifactId>site-shared</artifactId>
+				<version>1.0-SNAPSHOT</version>
 			</dependency>
-			<!-- /etl-modul -->
+
+			<dependency>
+				<groupId>xdata.etl</groupId>
+				<artifactId>site-service</artifactId>
+				<version>1.0-SNAPSHOT</version>
+			</dependency>
 			<!-- gwt -->
 
 			<dependency>
@@ -445,4 +446,8 @@
 
 	</dependencyManagement>
 	<packaging>pom</packaging>
+	<modules>
+		<module>../../../svn/site-service</module>
+		<module>../../../svn/site-shared</module>
+	</modules>
 </project>
