--- a/etl-parent/pom.xml
+++ b/etl-parent/pom.xml
@@ -52,6 +52,13 @@
 	</repositories>
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>xdata.etl</groupId>
+				<artifactId>site-shared</artifactId>
+				<classifier>sources</classifier>
+				<scope>provided</scope>
+				<version>1.0-SNAPSHOT</version>
+			</dependency>
 
 			<dependency>
 				<groupId>xdata.etl</groupId>
