--- a/etl-parent/pom.xml
+++ b/etl-parent/pom.xml
@@ -23,6 +23,8 @@
 		<gxt.version>3.0.1</gxt.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
+		<etl.site.version>1.0-SNAPSHOT</etl.site.version>
 	</properties>
 
 	<repositories>
@@ -52,25 +54,25 @@
 	</repositories>
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
+			<!-- <dependency>
 				<groupId>xdata.etl</groupId>
 				<artifactId>site-shared</artifactId>
 				<classifier>sources</classifier>
 				<scope>provided</scope>
-				<version>1.0-SNAPSHOT</version>
+				<version>${etl.site.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>xdata.etl</groupId>
 				<artifactId>site-shared</artifactId>
-				<version>1.0-SNAPSHOT</version>
+				<version>${etl.site.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>xdata.etl</groupId>
 				<artifactId>site-service</artifactId>
-				<version>1.0-SNAPSHOT</version>
-			</dependency>
+				<version>${etl.site.version}</version>
+			</dependency> -->
 			<!-- gwt -->
 
 			<dependency>
@@ -460,8 +462,4 @@
 
 	</dependencyManagement>
 	<packaging>pom</packaging>
-	<modules>
-	<module>../site-service</module>
-	<module>../site-shared</module>
-	</modules>
 </project>
