--- a/site-service/pom.xml
+++ b/site-service/pom.xml
@@ -8,6 +8,7 @@
 		<dependency>
 			<groupId>xdata.etl</groupId>
 			<artifactId>site-shared</artifactId>
+			<version>${etl.site.version}</version>
 		</dependency>
 
 		<!-- hadoop -->
@@ -204,8 +205,9 @@
 	</dependencies>
 	<parent>
 		<groupId>xdata.etl</groupId>
-		<artifactId>etl-parent</artifactId>
+		<artifactId>site-etl-models</artifactId>
 		<version>1.0-SNAPSHOT</version>
+		<relativePath>../../../svn/site-etl-models</relativePath>
 	</parent>
 
 	<build>
